[gd_scene load_steps=4 format=3 uid="uid://cbip71dkddjh5"]

[ext_resource type="Script" path="res://scenes/menu/main_menu.gd" id="1_yg1ei"]
[ext_resource type="Texture2D" uid="uid://drm38efa8v2ou" path="res://assets/Free/fundo.png" id="2_qxlqg"]
[ext_resource type="Texture2D" uid="uid://c1si1wepdqup2" path="res://assets/Free/LogoGame.png" id="3_vdvgu"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_yg1ei")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -565.0
offset_top = -360.0
offset_right = 565.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qxlqg")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.5
offset_top = -170.0
offset_right = 290.5
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_vdvgu")

[node name="level1" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -273.0
offset_top = -11.0
offset_right = -81.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Level: 1"

[node name="level2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = -15.0
offset_right = 243.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "level: 2"

[node name="level3" type="Button" parent="."]
offset_left = 303.0
offset_top = 436.0
offset_right = 494.0
offset_bottom = 526.0
theme_override_font_sizes/font_size = 25
text = "Level: 3
"

[connection signal="pressed" from="level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="level3" to="." method="_on_level_3_pressed"]
